<resources>
    <string name="app_name" translatable="false">VPN Gate Connector</string>
    <string name="home" translatable="false">Home</string>
    <string name="paid_server">Paid Server</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="filter_server_protocol">Show server with protocol</string>
    <string name="reset">Reset</string>
    <string name="show_tcp_server">TCP Server</string>
    <string name="show_udp_server">UDP Server</string>
    <string name="show_l2tp_server">L2TP Server</string>
    <string name="show_sstp_server">MS-SSTP Server</string>
    <string name="must_check_at_least_1_protocol">You must check at least 1 server protocol to continue</string>
    <string-array name="number_filter_operator">
        <item>equal (=)</item>
        <item>greater than (&gt;)</item>
        <item>greater or equal (&gt;=)</item>
        <item>less than (&lt;)</item>
        <item>less than or equal (&lt;=)</item>
    </string-array>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="speed">Speed</string>
    <string name="hostname">Hostname</string>
    <string name="score">Score</string>
    <string name="score_short">Score</string>
    <string name="ping">Ping</string>
    <string name="session">Session</string>
    <string name="max_session">Max Session</string>
    <string name="domain">Domain</string>
    <string name="good">Good</string>
    <string name="medium">Normal</string>
    <string name="full">Full</string>
    <string name="uptime">Uptime</string>
    <string name="owner">Owner</string>
    <string name="tcp_port" translatable="false">TCP</string>
    <string name="udp_port" translatable="false">UDP</string>
    <string name="l2tp_support">L2TP Support</string>
    <string name="l2tp_supported">Yes</string>
    <string name="sstp_support">MS-SSTP Support</string>
    <string name="ms_sstp">MS-SSTP</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="cancel_connection">Disconnect</string>
    <string name="pauseVPN">Pause VPN</string>
    <string name="resumevpn">Resume VPN</string>
    <string name="state_connected">Connected</string>
    <string name="connection_error">Error when trying get data from server. Tap to try again!</string>
    <string name="no_network">Your device is not connect to any network\nPlease connect any wifi or enable mobile data to continue</string>
    <string name="loading_text">App is fetching data from server\nPlease wait in a moment</string>
    <string name="search_hint">Country, IP, Hostname, Operator</string>
    <string name="to_top">Back to top</string>
    <string name="country">Country</string>
    <string name="sort_property">Sort by</string>
    <string name="sort_type">Sort type</string>
    <string name="sort_asc">Ascending</string>
    <string name="sort_desc">Descending</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="feature_not_available">You can\'t do this action at this moment</string>
    <string name="enable_notification_speed">Enable speed/statistics in notify</string>
    <string name="setting_startup_screen">Startup screen</string>
    <string-array name="startup_screen">
        <item>List screen</item>
        <item>Status screen</item>
    </string-array>
    <string name="setting_startup_screen_subtitle">Choose startup screen after app start with at least connection success.\nIf no connection success before list screen always display.\nStartup screen also display when tap to notification.</string>
    <string name="enable_notification_speed_hint">Display speed/statistics in notification. If turn off only connect status display in notification and battery usage may fewer.</string>
    <string name="setting_cache_label">Cache save time</string>
    <string name="setting_cache_subtitle">Is the time data will save in device after get data from server</string>
    <string name="setting_cache_auto_clear_label">Cache will auto clear at:</string>
    <string name="setting_cache_clear">Clear now</string>
    <string name="setting_clear_cache_success">Clear cache success</string>
    <string name="setting_clear_cache_error">Some thing when wrong. Cache can\'t clear</string>
    <string-array name="setting_cache_time">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hours</item>
        <item>2 hours</item>
        <item>4 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
    </string-array>
    <string name="press_back_again_to_exit">Please click BACK again to exit</string>
    <string name="setting_default_protocol">Default protocol</string>
    <string name="setting_protocol_subtitle">Default protocol to connect when server has both TCP and UDP protocol</string>
    <string-array name="list_protocol">
        <item>Always ask</item>
        <item>TCP</item>
        <item>UDP</item>
    </string-array>
    <string name="total_user">Total user</string>
    <string name="total_traffic">Total traffic</string>
    <string name="log_type">Log type</string>
    <string name="connect_to_this_server">Connect to this server</string>
    <string name="install_openvpn">Install OpenVPN Connect</string>
    <string name="save_config_file">Save OpenVPN config file</string>
    <string name="saved_ovpn_file_in">Saved ovpn file in %1$s. Import to OpenVPN Connect to use it</string>
    <string name="connect_via_l2tp">Connect via L2TP VPN</string>
    <string name="connect_via_sstp">Connect via MS-SSTP</string>
    <string name="connect_use_protocol">Connect use protocol:</string>
    <string name="retry_connect">Retry connect</string>
    <string name="vpn_auth_failure">Auth failure</string>
    <string name="connecting">Connecting…</string>
    <string name="sstp_connecting">Connecting MS-SSTP…</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnect_sstp">Disconnect MS-SSTP</string>
    <string name="cancel_sstp">Cancel MS-SSTP</string>
    <string name="disconnecting">Disconnecting…</string>
    <string name="sstp_disconnecting">Disconnecting MS-SSTP…</string>
    <string name="sstp_disconnected">Disconnected MS-SSTP</string>
    <string name="sstp_connected">Connected MS-SSTP with IP: %1$s</string>
    <string name="sstp_disconnected_by_error">Disconnected MS-SSTP because of error or by outside problem</string>
    <string name="canceled">Canceled</string>
    <string name="copy_ip">Copy IP to clipboard</string>
    <string name="copy_hostname">Copy HostName to clipboard</string>
    <string name="copied">Copied</string>
    <string name="connecting_use_protocol">Connecting to VPN server use [%1$s] protocol.</string>
    <string name="unknown_state">Unknown</string>
    <string name="state_user_vpn_permission" translatable="false">Waiting for user permission to use VPN API</string>
    <string name="check_ip">Check your current public IP</string>
    <string name="about_html">%1$s is an application allow connection to free VPN server by volunteer around the world from VPN Gate open source project. More information about VPN Gate project in link bellow.</string>
    <string name="license_html">%1$s is under GPLv3 LICENSE. It means if you use this project or a part of this project in your project it must be open source. This project uses other open source projects as libraries, detail below.</string>
    <string name="vpn_gate_link" translatable="false">http://www.vpngate.net/en/about_overview.aspx</string>
    <string name="version">Version:</string>
    <string name="license_label" translatable="false">OpenVPN for Android (GPLv2)</string>
    <string name="license_link" translatable="false">https://github.com/schwabe/ics-openvpn/blob/master/doc/LICENSE.txt</string>
    <string name="license_glide_label" translatable="false">glide (Apache License, Version 2.0)</string>
    <string name="license_glide_link" translatable="false">https://github.com/bumptech/glide/blob/master/LICENSE</string>
    <string name="license_sstp_label" translatable="false">Open SSTP Client for Android (MIT)</string>
    <string name="license_sstp_link" translatable="false">https://github.com/kittoku/Open-SSTP-Client/blob/main/LICENSE</string>
    <string name="license_softether_label" translatable="false">SoftEther-Android-Module (Apache License, Version 2.0)</string>
    <string name="license_softether_link" translatable="false">https://github.com/hoang-rio/SoftEther-Android-Module/blob/main/LICENSE</string>
    <string name="license">License</string>
    <string name="operator_message">Operator message</string>
    <string name="hide_op_message_5time">Hide all message next 5 connect time</string>
    <string name="close">Close</string>
    <string name="name_hint">Your name. Minimum %1$d character</string>
    <string name="content_hint">What you need help?\nMinimum %1$d character</string>
    <string name="btn_send">Send</string>
    <string name="name_error_message">Name must be longer than %1$d character</string>
    <string name="content_error_message">Content must be longer than %1$d character</string>
    <string name="uploaded_data">Uploaded</string>
    <string name="downloaded_data">Downloaded</string>
    <string name="help_request_from">[VPN]Help request from: </string>
    <string name="send_email">Send email</string>
    <string name="email_error_fix">Please check correct error first</string>
    <string name="error_load_profile">Error load VPN profile</string>
    <string name="traffic_session">Session traffic</string>
    <string name="clear_statistics">Clear statistics</string>
    <string name="get_pro_version">Get Pro version</string>
    <string name="status">Status</string>
    <string name="tap_to_disconnect">Tap button to disconnect from %1$s</string>
    <string name="tap_to_connect_last">Tap button to connect to %1$s</string>
    <string name="connected_to">Connected to %1$s</string>
    <string name="no_last_vpn_server">Please select a VPN Server from home to connect first</string>
    <string name="connect_one_warning">You need connect to at least one VPN Server before access this function</string>
    <string name="disconnected">Disconnected</string>
    <string name="feature_available_in_pro">This feature only available in Pro version</string>
    <string name="block_ads_setting_label">Block Ads (Pro only)</string>
    <string name="block_ads_setting_hint">Block ads in all app and browser when VPN is connected use DNS</string>
    <string name="udp_setting_label">Include UDP server</string>
    <string name="udp_setting_hint">Include UDP server in server list</string>
    <string name="setting_apply_on_next_connection_time">This setting will apply on next connection time</string>
    <string name="dns_setting_label">Use custom DNS</string>
    <string name="dns_setting_hint">Use custom DNS when connected to VPN Server instead of default Google DNS (8.8.8.8/8.8.4.4).\nThis setting will turn off Block Ads setting when enabled</string>
    <string name="dns_ip_1" translatable="false">DNS 1</string>
    <string name="title_home">Home</string>
    <string name="title_servers">Servers</string>
    <string name="title_free_server">Free Server</string>
    <string name="title_personal">Personal</string>
    <string name="title_buy_data">Buy data</string>
    <string name="title_purchase_history">Purchase history</string>
    <string name="exclude_app_description">Selected apps will bypass the VPN tunnel and use your regular internet connection</string>
    <string name="search_apps_hint">Search apps...</string>
</resources>