<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="7dp"
    android:paddingRight="7dp"
    android:paddingTop="20dp">

    <TextView
        style="@style/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version" />

        <TextView
            android:id="@+id/txt_version_name"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="1.0-dev" />
    </LinearLayout>

    <TextView
        style="@style/AppTheme.Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about" />

    <TextView
        android:id="@+id/txt_about_html"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/about_html" />

    <TextView
        android:id="@+id/txt_vpn_gate_link"
        style="@style/AppTheme.Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vpn_gate_link" />

    <TextView
        style="@style/AppTheme.Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/license" />

    <TextView
        android:id="@+id/txt_license_html"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/license_html" />

    <TextView
        android:id="@+id/txt_github_link"
        style="@style/AppTheme.Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license_link" />
</LinearLayout>