<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="vn.unlimit.vpngate.fragment.paidserver.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_paid_server_home" />

    <fragment
        android:id="@+id/navigation_server_list"
        android:name="vn.unlimit.vpngate.fragment.paidserver.ServersFragment"
        android:label="@string/title_servers"
        tools:layout="@layout/fragment_server_list" />

    <fragment
        android:id="@+id/navigation_free_server"
        android:name="vn.unlimit.vpngate.fragment.paidserver.HomeFragment"
        android:label="@string/title_free_server"
        tools:layout="@layout/fragment_paid_server_home" />

    <fragment
        android:id="@+id/navigation_personal"
        android:name="vn.unlimit.vpngate.fragment.paidserver.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal" />

    <fragment
        android:id="@+id/navigation_buy_data"
        android:name="vn.unlimit.vpngate.fragment.paidserver.BuyDataFragment"
        android:label="@string/title_buy_data"
        tools:layout="@layout/fragment_buy_data" />

    <fragment
        android:id="@+id/navigation_purchase_history"
        android:name="vn.unlimit.vpngate.fragment.paidserver.PurchaseHistoryFragment"
        android:label="@string/title_purchase_history"
        tools:layout="@layout/fragment_purchase_history" />
</navigation>
