<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:theme="@style/AppTheme.BottomSheetDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOverlay"
        android:paddingLeft="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_sort_orange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sort" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_property"
                android:theme="@style/label" />

            <RadioGroup
                android:id="@+id/rdg_sort_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed" />

                <RadioButton
                    android:id="@+id/radio_session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/session" />

                <RadioButton
                    android:id="@+id/radio_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/rdg_sort_property2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_ping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ping" />

                <RadioButton
                    android:id="@+id/radio_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_short" />

                <RadioButton
                    android:id="@+id/radio_uptime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uptime" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/lineColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_type"
                android:theme="@style/label" />

            <RadioGroup
                android:id="@+id/rdg_sort_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_sort_type_asc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sort_asc" />

                <RadioButton
                    android:id="@+id/radio_sort_type_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_desc" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_apply_button"
            android:padding="5dp"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>