<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_white"
        android:title="@string/sort"
        app:showAsAction="always"
        tools:ignore="MenuTitle">
        <menu>
            <item
                android:id="@+id/filter_tcp"
                android:checkable="true"
                android:checked="true"
                android:title="@string/show_tcp_server"
                app:actionViewClass="android.widget.CheckBox"
                app:showAsAction="ifRoom|withText"
                tools:ignore="MenuTitle" />
            <item
                android:id="@+id/filter_udp"
                android:checkable="true"
                android:checked="true"
                android:title="@string/show_udp_server"
                app:actionViewClass="android.widget.CheckBox"
                app:showAsAction="ifRoom|withText"
                tools:ignore="MenuTitle" />
            <item
                android:id="@+id/filter_l2tp"
                android:checkable="true"
                android:checked="true"
                android:title="@string/show_l2tp_server"
                app:actionViewClass="android.widget.CheckBox"
                app:showAsAction="ifRoom|withText"
                tools:ignore="MenuTitle" />
        </menu>
    </item>
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white"
        android:title="@string/sort"
        app:showAsAction="always"
        tools:ignore="MenuTitle" />
</menu>