<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sort" />
        </LinearLayout>

        <ImageView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/confirm"
            android:focusable="true"
            android:src="@drawable/done_button_selector" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_property"
                android:theme="@style/label" />

            <RadioGroup
                android:id="@+id/rdg_sort_property"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sort_default" />

                <RadioButton
                    android:id="@+id/radio_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country" />

                <RadioButton
                    android:id="@+id/radio_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed" />

                <RadioButton
                    android:id="@+id/radio_ping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ping" />

                <RadioButton
                    android:id="@+id/radio_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score" />

                <RadioButton
                    android:id="@+id/radio_uptime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uptime" />

            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/lineColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_type"
                android:theme="@style/label" />

            <RadioGroup
                android:id="@+id/rdg_sort_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sort_type_asc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sort_asc" />

                <RadioButton
                    android:id="@+id/sort_type_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_desc" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>