<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOverlay"
        android:hint="@string/name_hint"
        android:padding="5dp"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:id="@+id/txt_error_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_red_light" />

    <EditText
        android:id="@+id/edt_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorOverlay"
        android:gravity="top"
        android:hint="@string/content_hint"
        android:minLines="5"
        android:padding="5dp"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:id="@+id/txt_error_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/holo_red_light" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:background="@drawable/selector_apply_button"
        android:text="@string/btn_send"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />
</LinearLayout>